perf: TUN 栈从 gvisor 改为 mixed，大幅提升网关吞吐量
gvisor 用户态协议栈在网关转发场景下吞吐仅约 8Mbit/s，
改为 mixed 模式（TCP 走系统内核栈，UDP 走 gvisor）后
可恢复到接近线速。同时启用 tcp-concurrent 和 mtu 1500。

--- a/config/template.yaml
+++ b/config/template.yaml
@@ -14,9 +14,13 @@ external-ui: ui
 # TUN 模式 - 透明代理核心
 tun:
   enable: true
-  stack: gvisor
+  stack: mixed            # mixed: TCP 走系统内核栈(高性能)，UDP 走 gvisor(兼容性好)
   auto-route: true
   auto-detect-interface: true
+  mtu: 1500
+
+# 性能优化
+tcp-concurrent: true      # TCP 并发连接
 
 # DNS 设置
 dns:
