perf: 从 TUN 切换到 pf + redir-port，解决网关吞吐量瓶颈
TUN 模式（无论 gvisor/mixed/system）处理 LAN 转发流量时
每个包都要在内核和用户空间之间拷贝，吞吐仅 8-30 Mbit/s。

改用 macOS 原生 pf 将 LAN 设备 TCP 流量在内核态直接重定向
到 mihomo redir-port，跳过 TUN 用户态拆包，吞吐接近线速。
同时屏蔽 QUIC (UDP 443) 迫使流媒体回退到 TCP 走代理。

--- a/config/template.yaml
+++ b/config/template.yaml
@@ -11,16 +11,15 @@ log-level: info
 external-controller: 0.0.0.0:{{API_PORT}}
 external-ui: ui
 
-# TUN 模式 - 透明代理核心
-tun:
-  enable: true
-  stack: mixed            # mixed: TCP 走系统内核栈(高性能)，UDP 走 gvisor(兼容性好)
-  auto-route: true
-  auto-detect-interface: true
-  mtu: 1500
+# ============================================
+# 透明代理方案：pf 重定向（非 TUN）
+# pf 在内核态将 LAN 设备的 TCP 流量重定向到 redir-port，
+# 避免 TUN 用户态拆包的性能瓶颈，吞吐量接近线速。
+# pf 规则由 start.sh 自动配置，无需手动操作。
+# ============================================
 
 # 性能优化
-tcp-concurrent: true      # TCP 并发连接
+tcp-concurrent: true
 
 # DNS 设置
 dns:
