feat: add installation script and supporting libraries for LAN Proxy Gateway
- Implemented `install.sh` for one-click installation on macOS, including system checks and Homebrew installation.
- Created `common.sh` for utility functions such as logging and color output.
- Added `config.sh` for configuration management and template rendering.
- Developed `detect.sh` for automatic detection of system parameters like CPU architecture and network interfaces.
- Introduced `setup-autostart.sh` for configuring the service to start on boot.
- Implemented `start.sh` and `stop.sh` scripts for managing the proxy gateway.
- Added `status.sh` for displaying the current status of the gateway and its components.
- Created `switch.sh` for quickly switching between proxy sources (URL or file).
- Added main entry point in `main.go` to execute the command line interface.
- Removed obsolete `lib/config.sh` as its functionality has been integrated into the new structure.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
 # === 隐私保护 - 绝对不能提交的文件 ===
 .secret
 .secret.bak
+gateway.yaml
 
 # 运行时生成的配置（包含订阅信息）
 data/
 config.yaml
+
+# Go 构建产物
+/gateway
+/gateway.exe
+/dist/
 
 # mihomo 数据文件
 *.mmdb
