--- a/.secret.example
+++ b/.secret.example
@@ -4,10 +4,17 @@
 #
 # ！！！.secret 包含隐私信息，已在 .gitignore 中排除 ！！！
 
-# [必填] 代理订阅链接（机场提供的 Clash/mihomo 订阅 URL）
+# [必填] 代理来源类型: url（订阅链接） 或 file（本地配置文件）
+PROXY_SOURCE="url"
+
+# --- 订阅链接模式（PROXY_SOURCE=url 时必填）---
 SUBSCRIPTION_URL="https://your-subscription-url-here"
 
-# [可选] 订阅名称（用于配置中标识）
+# --- 配置文件模式（PROXY_SOURCE=file 时必填）---
+# 支持完整的 Clash/mihomo YAML 配置文件，会自动提取其中的代理节点
+# PROXY_CONFIG_FILE="/path/to/your/clash-config.yaml"
+
+# [可选] 订阅/代理源名称（用于配置中标识）
 SUBSCRIPTION_NAME="subscription"
 
 # --- 以下为可选高级配置，取消注释即可修改 ---
